--- a/resources/views/homepage.html.twig
+++ b/resources/views/homepage.html.twig
@@ -10,9 +10,9 @@
             <div class="week_offer">
                 <h2>SPECIAL OFFER</h2>
                 <div class="offer_box">
-                    <div class="offer_image"><a href="{{ path('tour_show', {'slug' : 'taste-of-mongolia-with-naadam-festival'}) }}"><img src="/images/special_offer.jpg" alt=""></a></div>
+                    <div class="offer_image"><a href="{{ path('tour_show', {'slug' : 'jewels-of-mongolia-with-rural-naadam-festival-in-khuvsgul-lake'}) }}"><img src="/images/special_offer.jpg" alt="Jewels of Mongolia with Rural Naadam Festival in Khuvsgul lake"></a></div>
                     <div class="offer_text">
-                        <h3><a href="{{ path('tour_show', {'slug' : 'taste-of-mongolia-with-naadam-festival'}) }}">Taste of Mongolia with Naadam</a></h3>
+                        <h3><a href="{{ path('tour_show', {'slug' : 'jewels-of-mongolia-with-rural-naadam-festival-in-khuvsgul-lake'}) }}">Jewels of Mongolia with Rural Naadam Festival in Khuvsgul lake</a></h3>
                         <div class="offer_price">12 days / 11 nights</div>
                         <div class="offer_descr">
                             We invites you to join us this coming summer for an experience of a lifetime in the awesome landscapes of Mongolia, from mountains, to lakes, to hot dry desert, to rolling hills of open grassland...
