--- a/resources/views/layout.html.twig
+++ b/resources/views/layout.html.twig
@@ -158,7 +158,7 @@
                         <li><a href="{{ path('tour_show', {'slug' : slug}) }}"><span>{{ tour.name }} {% if tour.duration is defined %}({{ tour.duration2 }}){% endif %}</span></a></li>
                     {% endfor %}
                 </ul>
-                <a href="{{ path('catalog') }}"><img src="/images/request_catalog.jpg" alt="Request a catalog"/></a>
+                <a href="{{ path('catalog') }}"><img src="/images/order-catalog.jpg" alt="Request a catalog"/></a>
             </div>
 
             <div class="f_col f_col_3" style="width: 140px;">
