--- a/resources/views/_header.html.twig
+++ b/resources/views/_header.html.twig
@@ -60,12 +60,12 @@
                                         <div class="post-image"><a href="{{ path('tour_show', {'slug' : 'taste-of-mongolia'}) }}"><img src="/images/featured_thumb_taste.jpg" alt=""></a></div>
                                     </li>
                                     <li class="post-item">
-                                        <div class="post-title"><a href="{{ path('tour_show', {'slug' : 'treasures-of-mongolia'}) }}">Treasures of Mongolia<br/>(11 days, 10 nights)</a></div>
-                                        <div class="post-image"><a href="{{ path('tour_show', {'slug' : 'treasures-of-mongolia'}) }}"><img src="/images/featured_thumb_bayanzag.jpg" alt=""></a></div>
+                                        <div class="post-title"><a href="{{ path('tour_show', {'slug' : 'jewels-of-mongolia-with-rural-naadam-festival-in-khuvsgul-lake'}) }}">Jewels of Mongolia with Rural Naadam Festival in Khuvsgul lake<br/>(12 days, 11 nights)</a></div>
+                                        <div class="post-image"><a href="{{ path('tour_show', {'slug' : 'jewels-of-mongolia-with-rural-naadam-festival-in-khuvsgul-lake'}) }}"><img src="/images/featured_thumb_bayanzag.jpg" alt=""></a></div>
                                     </li>
                                     <li class="post-item">
                                         <div class="post-title"><a href="{{ path('tour_show', {'slug' : 'a-classic-journey-of-mongolia'}) }}">A Classic Journey of Mongolia<br/>(14 days, 13 nights)</a></div>
-                                        <div class="post-image"><a href="{{ path('tour_show', {'slug' : 'a-classic-journey-of-mongolia'}) }}"><img src="/images/featured_thumb_classic.jpg" alt=""></a></div>
+                                        <div class="post-image"><a href="{{ path('tour_show', {'slug' : 'a-classic-journey-of-mongolia'}) }}"><img src="/images/featured_thumb_rural_naadam.jpg" alt=""></a></div>
                                     </li>
                                 </ul>
                             </div>
