--- a/resources/views/Tour/treasures_of_mongolia.html.twig
+++ b/resources/views/Tour/treasures_of_mongolia.html.twig
@@ -197,13 +197,13 @@
                         <b style="color: #B28E1B">Region:</b> <span>{{ tour.region }}</span>
                         <br/>
                         <b style="color: #B28E1B">Price:</b> <span>$2995</span>
-                        <br/>
+                        <br/>{#
                         <span style="font-weight: bold; color: brown"><a
                                     href="http://www.travelallmongolia.com/contact/form">
                                 Contact us for Early Booking Discount</a></span>
-                        <br/>
-                        <span style="font-weight: bold; color: brown">$300 OFF by Oct 31</span>
-                        <br/>
+                        <br/>#}
+                        {#<span style="font-weight: bold; color: brown">$300 OFF by Oct 31</span>
+                        <br/>#}
                         <b style="color: #B28E1B">Single supplement:</b> <span>$500</span>
                         <br/>
                         If you are traveling alone and wish to share a room with another participant, we will try to find a roommate for you
