--- a/resources/views/Tour/taste-of-mongolia.html.twig
+++ b/resources/views/Tour/taste-of-mongolia.html.twig
@@ -214,8 +214,8 @@
                                     href="http://www.travelallmongolia.com/contact/form">
                                 Contact us for Early Booking Discount</a></span>
                         <br/>#}
-                        <span style="font-weight: bold; color: brown">$300 OFF</span>
-                        <br/>
+                        {#<span style="font-weight: bold; color: brown">$300 OFF</span>
+                        <br/>#}
                         <b style="color: #B28E1B">Single supplement:</b> <span>$490</span>
                         <br/>
                         If you are traveling alone and wish to share a room with another participant, we will try to find a roommate for you
