--- a/resources/views/Tour/eagle-festival-and-gobi-desert.html.twig
+++ b/resources/views/Tour/eagle-festival-and-gobi-desert.html.twig
@@ -39,7 +39,7 @@
                         <br/>
                         <b style="color: #B28E1B">Region:</b> <span>{{ tour.region }}</span>
                         <br/>
-                        <b style="color: #B28E1B">Price:</b> <span>$2895</span>
+                        <b style="color: #B28E1B">Price:</b> <span>$3295</span>
                         <br/>{#
                         <span style="font-weight: bold; color: brown"><a
                                     href="http://www.travelallmongolia.com/contact/form">
@@ -47,7 +47,7 @@
                         <br/>#}
                         {#<span style="font-weight: bold; color: brown">Save $200 BOOK by Dec 31, 2017</span>
                         <br/>#}
-                        <b style="color: #B28E1B">Single supplement:</b> <span>$550</span>
+                        <b style="color: #B28E1B">Single supplement:</b> <span>$660</span>
                         <br/>
                         If you are traveling alone and wish to share a room with another participant, we will try to find a roommate for you
 
@@ -224,7 +224,7 @@
                             <h2 style="color: #B28E1B; margin-top: 20px; ">DETAILED TOUR ITINERARY</h2>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">Sep 22 - Day 1 Arrival in Ulaanbaatar</div>
+                                <div class="box_title">Sep 21 - Day 1 Arrival in Ulaanbaatar</div>
                                 <div class="box_content">
                                     <p>Upon arrival at Chinggis Khan International Airport, you are met by tour guide
                                         and transferred to the hotel in the city center.</p>
@@ -241,7 +241,7 @@
                             </div>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">Sep 23 - Day 2 Ulaanbaatar to South Gobi</div>
+                                <div class="box_title">Sep 22 - Day 2 Ulaanbaatar to South Gobi</div>
                                 <div class="box_content">
                                     <p>Following breakfast at the hotel Drive to Dalanzadgad. We will have lunch at local restaurant in Dundgobi province.</p>
                                     <p><strong><em>Overnight in Ger Camp<br /> Meals: Breakfast, Lunch & Dinner</em></strong></p>
@@ -250,7 +250,7 @@
                             </div>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">Sep 24 - Day 3 Flaming Cliffs</div>
+                                <div class="box_title">Sep 23 - Day 3 Flaming Cliffs</div>
                                 <div class="box_content">
                                     <p>Drive to flaming cliffs known as Flaming Cliffs is located 20 kilometers away
                                         from Bulgan country; a lot of Paleontological findings have been discovered
@@ -265,7 +265,25 @@
                             </div>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">Sep 25 - Day 4 Drive to Hongor Sand</div>
+                                <div class="box_title">Sep 24 - Day 4 Drive to Yol Valley and Gurvan saikhan National Park</div>
+                                <div class="box_content">
+                                    <p>In the morning, we drive to Yol Valley. Learn about the local wildlife in the
+                                        Natural History Museum before taking a gentle hike through the valley to
+                                        discover their habitats. This valley is nestled deep within the hills and is a
+                                        safe haven to get away from the desert heat. Some areas of the valley are
+                                        continually sheltered from the hot sun and house huge, blocks of ice that
+                                        gradually melt away during the summer. It is very wide at the entrance and
+                                        narrows gradually into a remarkable gorge. You will get to see wild animals such
+                                        as ibex and wild sheep, and the vulture. You can go horseback or camel riding
+                                        around the area and go trekking to the gorge.
+                                    </p>
+                                    <p><strong><em> Overnight in Ger Camp <br /> Meals: Breakfast, Lunch, and Dinner</em></strong></p>
+                                    <div class="clear"></div>
+                                </div>
+                            </div>
+
+                            <div class="sb sb_brown">
+                                <div class="box_title">Sep 25 - Day 5 Drive to Hongor Sand</div>
                                 <div class="box_content">
                                     <p>After breakfast, take in the stunning scenery of the Gobi-Altai Mountain range as
                                         you transfer to the towering sand dunes of Khongor, home to the ‘Singing Sands’.
@@ -280,24 +298,22 @@
                             </div>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">Sep 26 - Day 5 Drive to Yol Valley and Gurvan saikhan National Park</div>
+                                <div class="box_title">Sep 26 - Day 6 Explore Khongor Sand Dune</div>
                                 <div class="box_content">
-                                    <p>In the morning, we drive to Yol Valley. Learn about the local wildlife in the
-                                        NaturalHistory Museum before taking a gentle hike through the valley to discover
-                                        their habitats. This valley is nestled deep within the hills and is a safe haven
-                                        to get away from the desert heat. Some areas of the valley are continually
-                                        sheltered from the hot sun and house huge, blocks of ice that gradually melt
-                                        away during the summer. It is very wide at the entrance and narrows gradually
-                                        into a remarkable gorge. You will get to see wild animals such as ibex and wild
-                                        sheep, and the vulture. You can go horseback or camel riding around the area and
-                                        go trekking to the gorge.</p>
+                                    <p>We will visit camel breeding family near the sand dune and will ride camel to the
+                                        sand dune. The dunes seem to stretch on forever like a soft ribbon of sand
+                                        draped over the desert. The shifting sand blown by the wind or someone makes
+                                        sound so it is called Singing Sand Dunes. There is a beautiful green oasis known
+                                        as Seruun bulag near the Khongor River. Return to the camp for lunch and enjoy
+                                        feeling silence and a peaceful in the beautiful surroundings Gobi Deserts.
+                                    </p>
                                     <p><strong><em> Overnight in Ger Camp<br /> Meals: Breakfast, Lunch, and Dinner</em></strong></p>
                                     <div class="clear"></div>
                                 </div>
                             </div>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">Sep 27 - Day 6 Day trip to Khavtsgait Petroglyphs and Nomads day</div>
+                                <div class="box_title">Sep 27 - Day 7 Day trip to Khavtsgait Petroglyphs and Nomads day</div>
                                 <div class="box_content">
                                     <p>In the morning we drive to the site of the Khavtsgait Petroglyphs. TheKhavtsgait
                                         Petroglyphs from the Bronze Age (4000-3000 BC) are beautifully carved on many
@@ -325,7 +341,7 @@
                             </div>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">Sep 28 - Day 7 Back to Ulaanbaatar</div>
+                                <div class="box_title">Sep 28 - Day 8 Back to Ulaanbaatar</div>
                                 <div class="box_content">
                                     <p>Following an early morning breakfast, we are driving back to Ulaanbaatar.
                                         Transferto hotel. Rest of the day is open for you to pursue your own interest.</p>
@@ -335,7 +351,7 @@
                             </div>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">Sep 29 – Day 8 Ulaanbaatar to Ulgii</div>
+                                <div class="box_title">Sep 29 - Day 9 Flight from Ulaanbaatar to Ulgii & Explore Ulgii Town and Visiting Museum</div>
                                 <div class="box_content">
                                     <p>Transfer to the airport for a morning flight to Ulgii (2.5 hours), capital of
                                         Bayan-Ulgii, Mongolia’s westernmost province. If the time permits, we will visit
@@ -352,14 +368,15 @@
                                         rug.
                                         <br>A visit to the well regarded provincial museum should provide a good
                                         overview of the Muslim culture of Western Mongolia that differs so much from
-                                        most of Mongolia.</p>
+                                        most of Mongolia.
+                                    </p>
                                     <p><strong><em>Overnight in local hotel or ger camp <br /> Meals: Dinner, Lunch & Dinner</em></strong></p>
                                     <div class="clear"></div>
                                 </div>
                             </div>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">Sep 30 – Day 9 Golden Eagle Festival - Opening Ceremony / Competition</div>
+                                <div class="box_title">Sep 30 – Day 10 Golden Eagle Festival - Opening Ceremony / Competition</div>
                                 <div class="box_content">
                                     <p>The official opening ceremony commences with the participants parading in on
                                         horseback with their eagles. The competition begins with each Kazakh displaying
@@ -376,7 +393,7 @@
                             </div>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">Oct 1 – Day 10 Golden Eagle Festivals & Awards Ceremony</div>
+                                <div class="box_title">Oct 1 – Day 11 Golden Eagle Festivals & Awards Ceremony</div>
                                 <div class="box_content">
                                     <p>The Golden Eagles will be released from a cliff to attack fox skins that will
                                         be dragged by their owner on horseback. The eagles will be judged on their
@@ -392,7 +409,7 @@
                             </div>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">Oct 2 - Day 11 Visiting Eagle Hunting Family and explore their unique lifestyle</div>
+                                <div class="box_title">Oct 2 - Day 12 Visiting Eagle Hunting Family and explore their unique lifestyle</div>
                                 <div class="box_content">
                                     <p>We will be visiting some of the nomads of the area and experiencing their unique
                                         lifestyle. Kazakh craftswomen are renowned for their colorful embroidery and
@@ -412,7 +429,7 @@
                             </div>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">Oct 3 - Day 12 Fly back to Ulaanbaatar</div>
+                                <div class="box_title">Oct 3 - Day 13 Fly back to Ulaanbaatar</div>
                                 <div class="box_content">
                                     <p>After breakfast, we will transfer to airport for return flight to Ulaanbaatar. In
                                         the afternoon there is more to see here upon arrival if you are interested, such
@@ -426,7 +443,7 @@
                             </div>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">Oct 4 – Day 13 Departure</div>
+                                <div class="box_title">Oct 4 – Day 14 Departure</div>
                                 <div class="box_content">
                                     <p>Check out from hotel and transfer to Chinggis Khaan International airport
                                         or Ulaanbatar train station for departure.</p>
